[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tt"
version = "0.1.0"
description = "Telegram 自动化工具库"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["telegram", "telethon", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "telethon>=1.28.0",
    "PyMySQL>=1.0.0",
    "pytz>=2023.3",
    "PyYAML>=6.0",
    "PySocks>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/tt"
Repository = "https://github.com/yourusername/tt.git"

